fix: fix off-center issue on mobile devices

--- a/public/src/css/index.css
+++ b/public/src/css/index.css
@@ -2,7 +2,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 100dvh;
   top: 0;
 }
 
